--- a/fsharp-winform/index.html
+++ b/fsharp-winform/index.html
@@ -867,12 +867,38 @@ s.Split([|<span style="color:#a31515;">&#39; &#39;</span>|]) |&gt;&nbsp;<span st
 </pre>
 </div>
 </div> <!-- Article -->
+
+<div id="disqus_thread"></div>
+<script>
+var disqus_config = function () {
+    this.page.title = "تعرّف على F# عمليا"
+    this.page.url = "http://shagrouni.github.io/fsharp-winform/index.html";
+    this.page.identifier = "/blog/fsharp-winform/index.html";
+};
+(function() {
+    var d = document, s = d.createElement('script');
+    s.src = '//shagrouni.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
+    </div>
+    
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-74950849-1', 'auto');
+  ga('send', 'pageview');
+</script>
+    <script id="dsq-count-scr" src="http://shagrouni.disqus.com/count.js" async></script>
 </center>
   <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
-    <p>&nbsp;</p>
+
   
 
 
