--- a/fsharp-winform/index.html
+++ b/fsharp-winform/index.html
@@ -866,8 +866,12 @@ s.Split([|<span style="color:#a31515;">&#39; &#39;</span>|]) |&gt;&nbsp;<span st
   val it : int = 163
 </pre>
 </div>
-</div> <!-- Article -->
+  <p>&nbsp;</p>
+  <p>&nbsp;</p>
+<hr />
+<!--   -->
 
+  <p>&nbsp;</p>
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
@@ -896,6 +900,8 @@ var disqus_config = function () {
   ga('send', 'pageview');
 </script>
     <script id="dsq-count-scr" src="http://shagrouni.disqus.com/count.js" async></script>
+</div> <!-- Article -->
+
 </center>
   <p>&nbsp;</p>
 
