--- a/fsharp-winform/index.html
+++ b/fsharp-winform/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <link href="fsharp.css" type="text/css" rel="stylesheet" />
+    <link href="../article.css" type="text/css" rel="stylesheet" />
   
     <title>تعرّف على F# عمليا</title>
 
@@ -880,10 +880,11 @@ s.Split([|<span style="color:#a31515;">&#39; &#39;</span>|]) |&gt;&nbsp;<span st
 </div>
 
   <p>&nbsp;</p>
+  <p>&nbsp;</p>
   <div align="left" >
   <a href ="https://github.com/shagrouni/WinFormProj">
   الملفات المصدرية للمشروع</a>
-  </div>   
+  </div>
   <p>&nbsp;</p>
 <hr />
 <!--   -->
