--- a/oo-step-by-step/index.html
+++ b/oo-step-by-step/index.html
@@ -9,7 +9,7 @@
 </title>
 
     <meta name="keywords" content="دلفي, برمجة, windows forms, دروس بلية, كورس" />
-    <meta name="description" content="بعض الحيل البرمجية في لغة دلفي" />
+    <meta name="description" content="دروس عملية في البرمجة بالمنحى للكائن وربطها بقواهد البانات" />
 </head>
 <body>
 
