--- a/fsharp-winform/index.html
+++ b/fsharp-winform/index.html
@@ -895,7 +895,7 @@ s.Split([|<span style="color:#a31515;">&#39; &#39;</span>|]) |&gt;&nbsp;<span st
 var disqus_config = function () {
     this.page.title = "تعرّف على F# عمليا"
     this.page.url = "http://shagrouni.github.io/fsharp-winform/index.html";
-    this.page.identifier = "/blog/fsharp-winform/index.html";
+    this.page.identifier = "shagrouni.github.io/fsharp-winform/index.html";
 };
 (function() {
     var d = document, s = d.createElement('script');
