--- a/adventures-in-delphi/index.html
+++ b/adventures-in-delphi/index.html
@@ -579,7 +579,7 @@ var</span>
           var disqus_config = function () {
             this.page.title = "مغامرات في دلفي"
             this.page.url = "http://shagrouni.github.io/adventures-in-delphi/index.html";
-            this.page.identifier = "/blog/adventures-in-delphi/index.html";
+            this.page.identifier = "shagrouni.github.io/adventures-in-delphi/index.html";
           };
           (function() {
             var d = document, s = d.createElement('script');
