--- a/fsharp-winform/index.html
+++ b/fsharp-winform/index.html
@@ -857,7 +857,7 @@ f.Controls.Add(btn)
 
 <h3>خاتمة</h3>
 <p>لم أستطع أن أخرج بخاتمة ترضيني لهذا المقال، لكن أثناء تفكيري في ذلك؛ خطر على بالي هذا السؤال:</p>
-<p>كم مرّة وردت كلمة F# أو دالّية في هذه المقالة؟</p>
+<p>كم مرّة وردت كلمة <span dir="ltr">F#</span> في هذه المقالة؟</p>
 <p>لمعرفة ذلك، قمت بحفظ محتوى هذه المقالة في ملف نصي، ثم نفذت التعابير التالية:</p>
 
 	
