--- a/fsharp-winform/index.html
+++ b/fsharp-winform/index.html
@@ -273,7 +273,7 @@ Program.fs ، هنا يستحسن أن نفصل التعليمات الخاصة 
 <p>بالمقابل فإن المعامل <span dir="ltr"><-</span> تعني تخصيص قيمة لمتغير متحوّل mutable مثل:</p>
 
 <pre style="color:black;text-align:left">
-    <span style="color:blue;">let mutable</span> = 5
+    <span style="color:blue;">let mutable</span> a = 5
     a &lt;- 6</pre>
 
 <p>لأن المتغير a تم تعريفة على أنه mutable أي متحول؛ يتم استخدام المعامل <span dir="ltr"><-</span>  لتغيير قيمته.
