--- a/functional_demo/index.html
+++ b/functional_demo/index.html
@@ -24,7 +24,7 @@
 <h1>الدالة function كمواطن درجة أولى</h1>  
             <td align="left" >
 
-<span style="font-size: 28px; font-weight: bold;">خالد الشقروني&nbsp;&nbsp;&nbsp;</span>14 06 2024
+<span style="font-size: 28px; font-weight: bold;">خالد الشقروني&nbsp;&nbsp;&nbsp;</span>15 06 2024
             </td>
         </tr>
     </table>
@@ -40,7 +40,7 @@
    x + y</pre></div>
     
   <p>إسم الدالة هو add، وبها محددان parameters وهما x و y، وبعد علامة = يكون جسم الدالة وهو x + y ولأن x + y هو التعبير expression الوحيد والأخير في جسم الدالة، فسيكون ناتج هذا التعبير هي القيمة التي ترجعها الدالة.</p>
-  <p>لاحظ أننا لا نحتاج لوضع أمر return أو result حيث أن آخر تعبير في الدالة سيتم اعتباره قيمة الدالة المرتجعة .</p>
+ 
   <p>في <span dir="ltr">F#</span> (والعديد من اللغات الأخرى) يمكن الاستغناء عن تحديد نوع البيانات صراحة explicitly وجعل اللغة تستنتج &nbsp;أو تستدل inference على نوع البيانات ضمنيا implicitly ، لذلك إذا أردنا تحديد نوع البيانات صراحة في الدالة فستكون الدالة كالتالي:</p>
 
   <div class="div-code"><pre>let add (x: int)(y: int): int =
@@ -95,11 +95,11 @@
 <p>يمكن أيضا تمرير هيكل دالة بالكامل بدلا من إسمها فقط مثل:</p>
 <div class="div-code"><pre>let f = ApplyFunc (fun x y = x * y + 1) 7 7</pre></div>
 
-<p>فتقوم بتطبيق الدالة التي استقبلتها على الرقمين 7 و 7، أي 7  7 ثم إضافة 1 ، لتعطي الناتج 50.</p>
+<p>فتقوم بتطبيق الدالة التي استقبلتها على الرقمين 7 و 7، أي 7 × 7 ثم إضافة 1 ، لتعطي الناتج 50.</p>
 
 <h2>3- إرجاع دالة كقيمة</h2>
 
-<p>الدالة يمكن لها أن ترجع دالة جديدة كقيمة . فمثلا الدالة التالية تقوم باختبار المعطى x فإن كان يساوي a ؛ تردّ دالة تضيف رقمين، غير ذلك تردّ دالّة أخرى تضرب رقمين:</p>
+<p>الدالة يمكن لها أن ترجع دالة جديدة كقيمة . فمثلا الدالة التالية تقوم باختبار المعطى x فإن كان يساوي a ؛ تردّ دالة تستقبل رقمين وترجع حاصل اضافتهما، غير ذلك تردّ دالّة غيرها تستقبل رقمين وترجع حاصل ضربهما:</p>
 <div class="div-code"><pre>let returnFunc x =
    if x == &lsquo;a&rsquo; then
       fun x y = x + y
@@ -111,7 +111,7 @@ let g = myFun 8 6</pre></div>
 <p>الناتج سيكون 14</p>
 
 <h2>الخلاصة</h2>
-<p>إذا، تكون الدالة مواطن درجة أولى في اللغة البرمجية عندما يكون متاحا في اللغة:</p>
+<p>تكون الدالة مواطن درجة أولى في اللغة البرمجية عندما يكون متاحا في اللغة:</p>
 <ul>
 <li>تخصيص الدالة لمعرّف أو متغيّر</li>
 <li>أن تستقبل الدالة دالة أخرى كمُعطى argument.</li>
