--- a/books/index.html
+++ b/books/index.html
@@ -22,11 +22,12 @@
         <tr>
             <td>
 
-                <p><a href="https://github.com/shagrouni/books/e_pascal_arabic.pdf">أساسي باسكال</a> كتاب عن لغة باسكال في دلفي لماركو كانتو، ترجمة خالد الشقروني</p>
-                <p><a href="https://github.com/shagrouni/books/una_vita_per_italia_arabic.pdf">حياة للإيطاليا</a> لأودولفو غراتسياني، ترجمة خالد الشقروني</p>
+                <p><a href="e_pascal_arabic.pdf">أساسي باسكال</a> كتاب عن لغة باسكال في دلفي لماركو كانتو، ترجمة خالد الشقروني</p>
+                <p><a href="una_vita_per_italia_arabic.pdf">حياة للإيطاليا</a> لأودولفو غراتسياني، ترجمة خالد الشقروني</p>
             </td>
         </tr>
 </table>
 </div>
 </body>
+
 </html>
