--- a/books/index.html
+++ b/books/index.html
@@ -22,8 +22,8 @@
         <tr>
             <td>
 
-                <p><a href="e_pascal_arabic.pdf">أساسي باسكال</a> كتاب عن لغة باسكال في دلفي لماركو كانتو، ترجمة خالد الشقروني</p>
-                <p><a href="una_vita_per_italia_arabic.pdf">حياة للإيطاليا</a> لأودولفو غراتسياني، ترجمة خالد الشقروني</p>
+                <p><a href="http://shagrouni.github.io/books/e_pascal_arabic.pdf">أساسي باسكال</a> كتاب عن لغة باسكال في دلفي لماركو كانتو، ترجمة خالد الشقروني</p>
+                <p><a href="http://shagrouni.github.io/books/una_vita_per_italia_arabic.pdf">حياة للإيطاليا</a> لأودولفو غراتسياني، ترجمة خالد الشقروني</p>
             </td>
         </tr>
 </table>
@@ -31,3 +31,4 @@
 </body>
 
 </html>
+
