--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img alt="" src="sky.jpg" />
 <table width="80%">
   <tr>
-  <td><h1>مغامرات في البرمجة</h1></td>
+  <td><h1>خالد الشقروني</h1></td>
   <td align="left" valign="top">
       <a href="http://shagrouni.blogspot.com/" style="text-decoration:none">
           <img src="blogger.png"  />
@@ -64,6 +64,7 @@
 
 </body>
 </html>
+
 
 
 
