--- a/books/index.html
+++ b/books/index.html
@@ -1,12 +1,69 @@
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="ar" dir="rtl">
 <head>
-    <meta charset="utf-8" />
-    <link href="../article.css" type="text/css" rel="stylesheet" />
-  
-    <title>كتب</title>
+    <meta charset="UTF-8">
+    <title>قائمة الكتب</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            padding: 20px;
+        }
 
-    <meta name="keywords" content="f#, برمجة,  ترجمة, " />
-    <meta name="description" content="كتب مترجمة لخالد الشقروني" />
+        .book-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+            gap: 20px;
+            width: 100%;
+            max-width: 1000px;
+        }
+
+        .book-item {
+            background: #fff;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            text-align: center;
+            transition: transform 0.2s;
+        }
+
+        .book-item:hover {
+            transform: translateY(-5px);
+        }
+
+        .book-item img {
+            width: 120px; /* حجم الصورة المصغرة */
+            height: 180px;
+            object-fit: cover;
+            border-radius: 4px;
+            margin-bottom: 10px;
+        }
+
+        .book-title {
+            display: block;
+            font-size: 1.1em;
+            font-weight: bold;
+            color: #333;
+            text-decoration: none;
+        }
+
+        .book-title:hover {
+            color: #007bff;
+        }
+
+        .download-btn {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 8px 15px;
+            background-color: #28a745;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 0.9em;
+        }
+    </style>
 </head>
 <body>
 
@@ -15,20 +72,34 @@
   <img alt="" src="../sky.jpg" /></a>
   <div class="div-article">  
 
-<h1>كتب</h1>
-<table style="width: 100%;">
+<p></p>
+<div class="book-list">
+    
+
+    <div class="book-item">
+	    <a href="una_vita_per_italia_arabic.pdf">
+        <img src="una_vita_cover_s.jpg" alt="غلاف الكتاب"> </a>
+        <a href="una_vita_per_italia_arabic.pdf" class="book-title">حياة لإيطاليا</a>
+        <!--<a href="una_vita_per_italia_arabic.pdf" class="download-btn">تحميل PDF</a>-->
+    </div>
+
+    <div class="book-item">
+	    <a href="https://www.samawy.com/i/1005551/%D8%AA%D8%B7%D8%A8%D9%8A%D9%82-UML">
+        <img src="uml_cover_s.jpg" alt="غلاف الكتاب"> </a>
+        <a href="https://www.samawy.com/i/1005551/%D8%AA%D8%B7%D8%A8%D9%8A%D9%82-UML" class="book-title">تطبيق UML</a>
+       <!-- <a href="link-to-download-3.pdf" class="download-btn">تحميل PDF</a> -->
+    </div>
+	
+    <div class="book-item">
+        <a href="e_pascal_arabic.pdf" >	
+        <img src="pascal_cover_s.jpg" alt="غلاف الكتاب"> </a>
+        <a href="e_pascal_arabic.pdf" class="book-title">أساسي باسكال</a>
+        <!--<a href="e_pascal_arabic.pdf" class="download-btn">تحميل PDF</a>-->
+    </div>
 
 
-        <tr>
-            <td>
 
-                <p><a href="http://shagrouni.github.io/books/e_pascal_arabic.pdf">أساسي باسكال</a> كتاب عن لغة باسكال في دلفي لماركو كانتو، ترجمة خالد الشقروني</p>
-                <p><a href="http://shagrouni.github.io/books/una_vita_per_italia_arabic.pdf">حياة للإيطاليا</a> لأودولفو غراتسياني، ترجمة خالد الشقروني</p>
-            </td>
-        </tr>
-</table>
 </div>
+
 </body>
-
 </html>
-
